...
                android:layout_height="match_parent" >

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:id="@+id/imageView13"
                    android:src="@drawable/email"
                    android:layout_marginRight="25dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="demirmah93@gmail.com"
...
